--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>tic-tac-toe</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="ttt.js" defer></script>
+  </head>
+  <body>
 
+  </body> 
+</html>
