--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <script src="ttt.js" defer></script>
   </head>
   <body>
-
+    <div id='container'>
+      <div id='header'></div>
+      <div id='gameGrid'>
+        <div class="space" id="space0"></div>
+        <div class="space" id="space1"></div>
+        <div class="space" id="space2"></div>
+        <div class="space" id="space3"></div>
+        <div class="space" id="space4"></div>
+        <div class="space" id="space5"></div>
+        <div class="space" id="space6"></div>
+        <div class="space" id="space7"></div>
+        <div class="space" id="space8"></div>
+      </div>
+      <div id='footer'></div>
+    </div>
   </body> 
 </html>
